After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744394 - GtkGLArea documentation does not reflect changes in the api
GtkGLArea documentation does not reflect changes in the api
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Documentation
3.15.x
Other Mac OS
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-02-12 13:14 UTC by Pavol Klačanský
Modified: 2015-02-15 11:24 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Pavol Klačanský 2015-02-12 13:14:19 UTC
A bug fix #741946 introduced new properties for the GL context. These should be added to appropriate places in the documentation.

The example code is not supported in the core profile and should be updated accordingly.
Comment 1 Emmanuele Bassi (:ebassi) 2015-02-12 14:53:33 UTC
thanks for the bug report. I fixed both issues in master:

commit ec112a772b35ce3dca23d194f704615eef7d29cc
Author: Emmanuele Bassi <ebassi@gnome.org>
Date:   Thu Feb 12 13:19:21 2015 +0000

    glarea: Update documentation
    
    Drop the fixed pipeline example code.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=744394

commit c115c479dc33b44ab6eb071630d21e1d2a473c2e
Author: Emmanuele Bassi <ebassi@gnome.org>
Date:   Thu Feb 12 12:40:03 2015 +0000

    docs: Add missing GdkGLContext symbols
Comment 2 Pavol Klačanský 2015-02-15 11:00:19 UTC
Thanks, in first commit there is a type "shadres"
Comment 3 Emmanuele Bassi (:ebassi) 2015-02-15 11:24:24 UTC
thanks fixed.