glarea: Update documentation

Drop the fixed pipeline example code.

https://bugzilla.gnome.org/show_bug.cgi?id=744394